# model-interfaces

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
aixplain/aixplain_models/interfaces/: aixplain_metric.py  aixplain_model.py  function_models.py  metric_models.py
aixplain/aixplain_models/schemas/: function_input.py  function_output.py  metric_input.py  metric_output.py
aixplain/model_interfaces/: __init__.py  __version__.py
aixplain/model_interfaces/interfaces/: aixplain_project_node.py  function_models.py  project_node.py
aixplain/model_interfaces/schemas/: function_input.py  metric_output.py
aixplain/model_schemas/: __init__.py  __version__.py
aixplain/model_schemas/interfaces/: aixplain_metric.py  aixplain_model.py  function_models.py  metric_models.py
aixplain/model_schemas/schemas/: function_input.py  function_output.py  metric_input.py  metric_output.py
aixplain_models/: __init__.py
aixplain_models/interfaces/: aixplain_metric.py  aixplain_model.py  function_models.py  metric_models.py
aixplain_models/interfaces/metric_server/: aixplain_metric_server.py  dataplane.py  rest_server.py  v1_endpoints.py
aixplain_models/schemas/: function_input.py  function_output.py  metric_input.py  metric_output.py
docs/user/: README.md  model_setup.md
src/aixplain_models/: __version__.py
src/aixplain_models/interfaces/: aixplain_model.py  aixplain_model_server.py  (+2 more)
tests/unit_tests/: test_mock_classification.py  test_mock_diacritization.py  test_mock_speech_enhancement.py  test_mock_speech_recognition.py  test_mock_translation.py
(+139 files in other folders)
