# aixplain-models-internal/pyproject.toml

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aixplain"]
namespaces = true

[project]
name = "model-interfaces"
version = "0.0.1"
description = "Mock description"
license = { text = "Mock license" }
