# aixplain-models-internal/pyproject.toml

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aixplain"]
namespaces = true

[project]
name = "model-interfaces"
version = "0.0.1rc1"
description = "A package specifying the model interfaces supported by aiXplain"
license = { text = "Apache License, Version 2.0: http://www.apache.org/licenses/LICENSE-2.0" }